# ai-master

./: .gitignore  README.md  pyproject.toml
DocLayout/: README.md  dataset.py  gradio_ui.py  test.py  train.py  yolov8_doclaynet.yaml
FaceSwap/: README.md  faceswap_insightface.py  gradio_video_faceswap.py  video_faceswap.py  video_images.py
FaceSwap/config/: environment.yaml
MathFormulaDetector/: README.md  dataset.py  train.py  yolov8_math_formula.yaml
Qwen2TextCorrector/: dataset.py  main.py  model.py
Qwen2TextCorrector/grammar/: train_sharegpt.jsonl
