[tool.poetry]
name = "ai-master"
version = "0.1.0"
description = "master ai"
authors = ["chengbo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ultralytics = "^8.2.87"
gradio = "^4.43.0"
bitsandbytes = "^0.44.1"
transformers = "^4.46.0"
peft = "^0.13.2"
loguru = "^0.7.2"
tqdm = "^4.66.5"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
